samples/_failures_safe/1761143571_456a63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad372f72.c: In function ‘main’:
./samples/SAFE/__tmp_ad372f72.c:158:5: error: expected identifier at end of input
  158 |     if (error || tokens[pos].
      |     ^~
./samples/SAFE/__tmp_ad372f72.c:158:5: error: expected declaration or statement at end of input
